[Groom] made it work somhow

--- a/install.ipynb
+++ b/install.ipynb
@@ -160,7 +160,7 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "95c10dbc6f7eccef0c1ace84822d618f7863d3bc26cab307fc0169bb43c23fbe"
